--- a/nav.html
+++ b/nav.html
@@ -7,6 +7,7 @@
   <script type="text/javascript" src="js/jquery.js"></script>
   <link rel="stylesheet" href="css/comon0.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+
 </head>
 <script>
   $(window).load(function () {
@@ -35,20 +36,26 @@
   </div>
 
   <div class="head">
-    <a>
-      <h1 class="navbar"><i class="bi-alarm"></i> hh</h1>
+    <div class="buttonslect"><!--<img src="picture/weather.png"><span>多云转小雨</span>--><img src="images/photo.png"
+        style="	border-radius: 20px;">
+    </div>
+
+    <a href="dashboard.html">
+      <h1 class="navbar"><i class="bi-alarm"></i> 仪表盘</h1>
     </a>
     <a>
-      <h1 class="navbar"><i class="bi-alarm"></i> hh</h1>
+      <h1 class="navbar"><i class="bi-alarm"></i> 病人</h1>
     </a>
-    <div class="titlename"><img src="images/logo.png">BC</div>
+    <div class="titlename"><img src="images/logo.png"></div>
     <a>
-      <h1 class="navbar"><i class="bi-alarm"></i> hh</h1>
+      <h1 class="navbar"><i class="bi-alarm"></i> 消息</h1>
     </a>
     <a>
-      <h1 class="navbar"><i class="bi-alarm"></i> hh</h1>
+      <h1 class="navbar"><i class="bi-alarm"></i> 数据集</h1>
     </a>
     <div class="weather"><!--<img src="picture/weather.png"><span>多云转小雨</span>--><span id="showTime"></span></div>
+
+
 
     <script>
       var t = null;
@@ -69,72 +76,7 @@
     </script>
 
   </div>
-  <!-- <div class="mainbox">
-    <ul class="clearfix">
-      <li>
-        <div class="boxall" style="height: 3.2rem">
-          <div class="alltitle">模块标题样式</div>
-          <div class="allnav" id="echart1"></div>
-          <div class="boxfoot"></div>
-        </div>
-        <div class="boxall" style="height: 3.2rem">
-          <div class="alltitle">模块标题样式</div>
-          <div class="allnav" id="echart2"></div>
-          <div class="boxfoot"></div>
-        </div>
-        <div class="boxall" style="height: 3.2rem">
-          <div style="height:100%; width: 100%;">
-            <div class="sy" id="fb1"></div>
-            <div class="sy" id="fb2"></div>
-            <div class="sy" id="fb3"></div>
-          </div>
-          <div class="boxfoot">
 
-          </div>
-        </div>
-      </li>
-      <li>
-        <div class="bar">
-          <div class="barbox">
-            <ul class="clearfix">
-              <li class="pulll_left counter">12581189</li>
-              <li class="pulll_left counter">3912410</li>
-            </ul>
-          </div>
-          <div class="barbox2">
-            <ul class="clearfix">
-              <li class="pulll_left">2018年总收入情况 </li>
-              <li class="pulll_left">2018年总支出情况</li>
-            </ul>
-          </div>
-        </div>
-        <div class="map">
-          <div class="map1"><img src="picture/lbx.png"></div>
-          <div class="map2"><img src="picture/jt.png"></div>
-          <div class="map3"><img src="picture/brainmap.png"></div>
-          <div class="map4" id="map_1"></div>
-        </div>
-      </li>
-      <li>
-        <div class="boxall" style="height:3.4rem">
-          <div class="alltitle">模块标题样式</div>
-          <div class="allnav" id="echart4"></div>
-          <div class="boxfoot"></div>
-        </div>
-        <div class="boxall" style="height: 3.2rem">
-          <div class="alltitle">模块标题样式</div>
-          <div class="allnav" id="echart5"></div>
-          <div class="boxfoot"></div>
-        </div>
-        <div class="boxall" style="height: 3rem">
-          <div class="alltitle">模块标题样式</div>
-          <div class="allnav" id="echart6"></div>
-          <div class="boxfoot"></div>
-        </div>
-      </li>
-    </ul>
-  </div>
-  <div class="back"></div> -->
 </body>
 
 </html>
