--- a/dashboard.html
+++ b/dashboard.html
@@ -1,21 +1,205 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script>
-        $(function () {
-            $("#navbar-placeholder").load("nav.html");
-        });
-    </script>
+    <meta charset="utf-8">
+    <title>index</title>
+    <script type="text/javascript" src="js/jquery.js"></script>
+    <link rel="stylesheet" href="css/comon0.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+    <!-- 网络 -->
+    <!-- 引入样式 -->
+    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <!-- 引入组件库 -->
+    <script src="./js/vue.js"></script>
+    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
 </head>
+<script>
+    $(window).load(function () {
+        $(".loading").fadeOut()
+    })
+
+    /****/
+    $(document).ready(function () {
+        var whei = $(window).width()
+        $("html").css({ fontSize: whei / 20 })
+        $(window).resize(function () {
+            var whei = $(window).width()
+            $("html").css({ fontSize: whei / 20 })
+        });
+    });
+</script>
+<script type="text/javascript" src="js/echarts.min.js"></script>
+<script language="JavaScript" src="js/js.js"></script>
 
 <body>
-    <div id="navbar-placeholder"></div>
+    <div class="canvas" style="opacity: .2">
+        <iframe frameborder="0" src="js/index.html" style="width: 100%; height: 100%"></iframe>
+    </div>
+    <div class="loading">
+        <div class="loadbox"> <img src="picture/loading.gif"> 页面加载中... </div>
+    </div>
 
+    <div class="head">
+        <div class="buttonslect"><!--<img src="picture/weather.png"><span>多云转小雨</span>--><img src="images/photo.png"
+                style="	border-radius: 20px;">
+            <span id="app" style="padding-left: 40px; padding-top: 20px;">
+                <el-button @click="openDialog" style="font-weight: 600;"> 方法选择 </el-button>
+                <el-dialog :title="thistitle" :visible.sync="dialogVisible" width="80%" :before-close="handleClose">
+                    <el-card class="box-card" shadow="hover" v-if="showFirstPicture">
+                        <div class="tanchuang">
+                            <div id="main" style="width: 1000px; height: 300px;"></div>
+                        </div class="tanchuang">
+                        <div id="main1" style="width: 1000px; height: 300px; padding-left: 80px;" v-if="div2"></div>
+                        <span style="display:flex;
+                            justify-content: center;">
+                            <el-pagination @current-change="handlePageChange" background layout="prev, pager, next"
+                                :total="40" v-if="showyema">
+                            </el-pagination>
+                        </span>
+                    </el-card>
+
+
+                    <div class="mselection">
+                        <el-checkbox v-model="checked1" :label=label1 border v-if="showCheck1"></el-checkbox>
+                        <el-checkbox v-model="checked2" :label=label2 border v-if="showCheck2"></el-checkbox>
+                        <el-checkbox v-model="checked3" :label=label3 border v-if="showCheck3"></el-checkbox>
+                        <el-checkbox v-model="checked4" :label=label4 border v-if="showCheck4"></el-checkbox>
+                    </div>
+                    <span slot="footer" class="dialog-footer">
+                        <el-button type="danger" @click="closeDialog" icon="el-icon-delete" v-if="showCancel">取 消
+                        </el-button>
+                        <el-button type="warning" @click="nextpage" icon="el-icon-s-tools" v-if="showSkip">跳过
+                        </el-button>
+                        <el-button type="primary" @click="run" icon="el-icon-s-tools" v-if="showRun">运 行
+                        </el-button>
+                        <el-button type="primary" @click="lastpage" icon="el-icon-back" v-if="showLastone">上一个
+                        </el-button>
+                        <el-button type="primary" @click="nextpage" icon="el-icon-right" v-if="showNextone">下一个
+                        </el-button>
+                        <el-button type="success" @click="closeDialog" icon="el-icon-success" v-if="showSure">确 定
+                        </el-button>
+                    </span>
+                </el-dialog>
+            </span>
+        </div>
+
+        <a href="dashboard.html">
+            <h1 class="navbar"><i class="bi-alarm"></i> 仪表盘</h1>
+        </a>
+        <a>
+            <h1 class="navbar"><i class="bi-alarm"></i> 病人</h1>
+        </a>
+        <div class="titlename"><img src="images/logo.png"></div>
+        <a>
+            <h1 class="navbar"><i class="bi-alarm"></i> 消息</h1>
+        </a>
+        <a>
+            <h1 class="navbar"><i class="bi-alarm"></i> 数据集</h1>
+        </a>
+        <div class="weather"><!--<img src="picture/weather.png"><span>多云转小雨</span>--><span id="showTime"></span></div>
+
+
+
+        <script>
+            var t = null;
+            t = setTimeout(time, 1000);//開始运行
+            function time() {
+                clearTimeout(t);//清除定时器
+                dt = new Date();
+                var y = dt.getFullYear();
+                var mt = dt.getMonth() + 1;
+                var day = dt.getDate();
+                var h = dt.getHours();//获取时
+                var m = dt.getMinutes();//获取分
+                var s = dt.getSeconds();//获取秒
+                document.getElementById("showTime").innerHTML = y + "年" + mt + "月" + day + "-" + h + "时" + m + "分" + s + "秒";
+                t = setTimeout(time, 1000); //设定定时器，循环运行     
+            }
+
+        </script>
+
+    </div>
+    <div class="mainbox">
+        <ul class="clearfix">
+            <li>
+                <div class="boxall" style="height: 4.2rem">
+                    <div class="alltitle">模块标题样式</div>
+                    <div class="allnav" id="echart2"></div>
+                    <div class="boxfoot"></div>
+                </div>
+                <div class="boxall" style="height: 4.2rem">
+                    <div style="height:100%; width: 100%;">
+                        <div class="sy" id="fb1"></div>
+                        <div class="sy" id="fb2"></div>
+                        <div class="sy" id="fb3"></div>
+                    </div>
+                    <div class="boxfoot">
+
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="bar">
+                    <div class="barbox">
+                        <ul class="clearfix">
+                            <li class="pulll_left counter">1251189</li>
+                            <li class="pulll_left counter">3912410</li>
+                        </ul>
+                    </div>
+                    <div class="barbox2">
+                        <ul class="clearfix">
+                            <li class="pulll_left">总访问量</li>
+                            <li class="pulll_left">2018年总支出情</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="map">
+                    <div class="map1"><img src="picture/lbx.png"></div>
+                    <div class="map2"><img src="picture/jt.png"></div>
+                    <div class="map3"><img src="picture/brainmap.png"></div>
+                    <div class="map4" id="map_1"></div>
+                </div>
+            </li>
+            <li>
+                <div class="boxall" style="height:4.2rem">
+                    <div class="alltitle">模块标题样式</div>
+                    <div class="allnav" id="echart4"></div>
+                    <div class="boxfoot"></div>
+                </div>
+                <div class="boxall" style="height: 4.2rem">
+                    <div class="alltitle">模块标题样式</div>
+                    <div class="allnav" id="echart6"></div>
+                    <div class="boxfoot"></div>
+                </div>
+            </li>
+        </ul>
+    </div>
+    <script src="./js/vuejs/dialog.js"></script>
+    <style scoped>
+        .el-dialog__header {
+            text-align: center;
+            /* 水平居中 */
+        }
+
+        .el-dialog__title {
+            line-height: 24px;
+            font-size: 30px;
+            color: #303133;
+        }
+
+        .tanchuang {
+            justify-content: center;
+            align-items: center;
+            display: flex;
+        }
+
+        .mselection {
+            margin-top: 20px;
+            justify-content: center;
+            display: flex;
+        }
+    </style>
 </body>
 
 </html>
