--- a/dashboard.html
+++ b/dashboard.html
@@ -87,14 +87,14 @@
         <a href="dashboard.html">
             <h1 class="navbar"><i class="bi-alarm"></i> 仪表盘</h1>
         </a>
-        <a>
+        <a href="patient.html">
             <h1 class="navbar"><i class="bi-alarm"></i> 病人</h1>
         </a>
         <div class="titlename"><img src="images/logo.png"></div>
-        <a>
+        <a href="message.html">
             <h1 class="navbar"><i class="bi-alarm"></i> 消息</h1>
         </a>
-        <a>
+        <a href="dataset.html">
             <h1 class="navbar"><i class="bi-alarm"></i> 数据集</h1>
         </a>
         <div class="weather"><!--<img src="picture/weather.png"><span>多云转小雨</span>--><span id="showTime"></span></div>
