--- a/nav.html
+++ b/nav.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="js/jquery.js"></script>
   <link rel="stylesheet" href="css/comon0.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
-
+  <link rel="shortcut icon" href="/head.ico" />
 </head>
 <script>
   $(window).load(function () {
@@ -31,9 +31,9 @@
   <div class="canvas" style="opacity: .2">
     <iframe frameborder="0" src="js/index.html" style="width: 100%; height: 100%"></iframe>
   </div>
-  <div class="loading">
+  <!-- <div class="loading">
     <div class="loadbox"> <img src="picture/loading.gif"> 页面加载中... </div>
-  </div>
+  </div> -->
 
   <div class="head">
     <div class="buttonslect"><!--<img src="picture/weather.png"><span>多云转小雨</span>--><img src="images/photo.png"
