--- a/dashboard.html
+++ b/dashboard.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>index</title>
     <script type="text/javascript" src="js/jquery.js"></script>
+    <link rel="shortcut icon" href="/head.ico" />
     <link rel="stylesheet" href="css/comon0.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <!-- 网络 -->
