--- a/someone.html
+++ b/someone.html
@@ -12,7 +12,7 @@
             $("#navbar-placeholder").load("nav.html");
         });
     </script>
-    <!-- <link rel="shortcut icon" href="/head.ico" /> -->
+    <link rel="shortcut icon" href="/head.ico" />
     <!-- 网络 -->
     <!-- 引入样式 -->
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
