--- a/dashboard.html
+++ b/dashboard.html
@@ -86,17 +86,17 @@
         </div>
 
         <a href="dashboard.html">
-            <h1 class="navbar"><i class="bi-alarm"></i> 仪表盘</h1>
+            <h1 class="navbar"><i class="bi bi-clipboard-data" style="color: white;"></i> 仪表盘</h1>
         </a>
         <a href="patient.html">
-            <h1 class="navbar"><i class="bi-alarm"></i> 病人</h1>
+            <h1 class="navbar"><i class="bi bi-people-fill" style="color: white;"></i> 病人</h1>
         </a>
         <div class="titlename"><img src="images/logo.png"></div>
         <a href="message.html">
-            <h1 class="navbar"><i class="bi-alarm"></i> 消息</h1>
+            <h1 class="navbar"><i class="bi bi-chat-dots" style="color: white;"></i>消息</h1>
         </a>
         <a href="dataset.html">
-            <h1 class="navbar"><i class="bi-alarm"></i> 数据集</h1>
+            <h1 class="navbar"><i class="bi bi-database" style="color: white;"></i>数据集</h1>
         </a>
         <div class="weather"><!--<img src="picture/weather.png"><span>多云转小雨</span>--><span id="showTime"></span></div>
 
