--- a/someone.html
+++ b/someone.html
@@ -24,7 +24,7 @@
 <body>
     <div id="navbar-placeholder"></div>
     <!-- totally new table -->
-    <div class="pimformation">
+    <div class="pimformation" style="position:relative; z-index: 10000000000;">
         <div id="app">
             <el-descriptions class="margin-top" :column="3" :size="size" border>
                 <template slot="extra">
