--- a/login/index.html
+++ b/login/index.html
@@ -95,7 +95,7 @@
       // 检查输入的凭据是否与正确的凭据匹配
       if (enteredUsername === username && enteredPassword === password) {
         // 如果登录成功，将用户重定向到所需的页面
-        window.location.href = "./dashboard.html";
+        window.location.href = "../dashboard.html";
       } else {
         // 如果登录失败，显示一个错误消息（您可以添加一个元素来显示消息）
         alert("凭据无效，请重试。");
