--- a/someone.html
+++ b/someone.html
@@ -135,6 +135,7 @@
                     // });
                 },
                 handleClose(done) {
+                    //关闭窗口
                     this.closeDialog();
                     done();
                 },
@@ -428,6 +429,7 @@
         });
     </script>
     <style scoped>
+        /* scoped表示只在该页面生效 */
         .tanchuang {
             justify-content: center;
             display: flex;
