--- a/dataset.html
+++ b/dataset.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 
     <!-- 引入 jQuery 库 -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script>
         // 当文档加载完成后，从 "nav.html" 加载导航栏内容到 id 为 "navbar-placeholder" 的元素中
         $(function () {
@@ -18,10 +18,10 @@
     </script>
 
     <!-- 引入 Element UI 样式 -->
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui/lib/theme-chalk/index.css">
     <!-- 引入 Vue.js 和 Element UI 组件库 -->
     <script src="./js/vue.js"></script>
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/element-ui/lib/index.js"></script>
     <!-- 引入自定义样式表 -->
     <link rel="stylesheet" href="css/dataset.css" />
 </head>
