--- a/message.html
+++ b/message.html
@@ -18,9 +18,9 @@
     </script>
 
     <!-- 引入 Element UI 样式和组件库 -->
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui/lib/theme-chalk/index.css">
     <script src="./js/vue.js"></script>
-    <script src="https://unpkg.com/element-ui/lib/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/element-ui/lib/index.js"></script>
 
     <!-- 引入自定义的样式表 -->
     <link rel="stylesheet" href="css/message.css" />
